# otp-cli

./: .gitignore  README.md  README.rst  main.py  otp.py  pyproject.toml  requirements.txt
otp_cli/: __main__.py  cli.py  hotp.py  images.py  otpauth_migrate.py  otpauth_migrate_pb2.py  otpauth_migrate_pb2.pyi  totp.py
tests/: conftest.py  test_cli.py  test_hotp_sha1.py  test_totp.py
totp_qrcode_analyzer/: __init__.py  __main__.py  hotp.py  main.py  otpauth_migrate.py  totp.py
